[tool.poetry]
name = "finra_api_queries"
version = "0.8.0"
description = "An API wrapper for FINRA's Query API"
authors = ["Cindy Chen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = "^0.17.1"
Sphinx = "^5.3.0"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
requests = "^2.28.1"
pandas = "^1.5.2"
DateTime = "^4.7"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
